parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> statements
Rule 2     statements -> statement
Rule 3     statements -> statements statement
Rule 4     statement -> LBRACKET ID RBRACKET NEWLINE
Rule 5     statement -> ID EQUAL VALUE NEWLINE
Rule 6     statement -> NEWLINE

Terminals, with rules where they appear

EQUAL                : 5
ID                   : 4 5
LBRACKET             : 4
NEWLINE              : 4 5 6
RBRACKET             : 4
VALUE                : 5
error                : 

Nonterminals, with rules where they appear

program              : 0
statement            : 2 3
statements           : 1 3

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statements
    (2) statements -> . statement
    (3) statements -> . statements statement
    (4) statement -> . LBRACKET ID RBRACKET NEWLINE
    (5) statement -> . ID EQUAL VALUE NEWLINE
    (6) statement -> . NEWLINE

    LBRACKET        shift and go to state 4
    ID              shift and go to state 5
    NEWLINE         shift and go to state 6

    program                        shift and go to state 1
    statements                     shift and go to state 2
    statement                      shift and go to state 3

state 1

    (0) S' -> program .



state 2

    (1) program -> statements .
    (3) statements -> statements . statement
    (4) statement -> . LBRACKET ID RBRACKET NEWLINE
    (5) statement -> . ID EQUAL VALUE NEWLINE
    (6) statement -> . NEWLINE

    $end            reduce using rule 1 (program -> statements .)
    LBRACKET        shift and go to state 4
    ID              shift and go to state 5
    NEWLINE         shift and go to state 6

    statement                      shift and go to state 7

state 3

    (2) statements -> statement .

    LBRACKET        reduce using rule 2 (statements -> statement .)
    ID              reduce using rule 2 (statements -> statement .)
    NEWLINE         reduce using rule 2 (statements -> statement .)
    $end            reduce using rule 2 (statements -> statement .)


state 4

    (4) statement -> LBRACKET . ID RBRACKET NEWLINE

    ID              shift and go to state 8


state 5

    (5) statement -> ID . EQUAL VALUE NEWLINE

    EQUAL           shift and go to state 9


state 6

    (6) statement -> NEWLINE .

    LBRACKET        reduce using rule 6 (statement -> NEWLINE .)
    ID              reduce using rule 6 (statement -> NEWLINE .)
    NEWLINE         reduce using rule 6 (statement -> NEWLINE .)
    $end            reduce using rule 6 (statement -> NEWLINE .)


state 7

    (3) statements -> statements statement .

    LBRACKET        reduce using rule 3 (statements -> statements statement .)
    ID              reduce using rule 3 (statements -> statements statement .)
    NEWLINE         reduce using rule 3 (statements -> statements statement .)
    $end            reduce using rule 3 (statements -> statements statement .)


state 8

    (4) statement -> LBRACKET ID . RBRACKET NEWLINE

    RBRACKET        shift and go to state 10


state 9

    (5) statement -> ID EQUAL . VALUE NEWLINE

    VALUE           shift and go to state 11


state 10

    (4) statement -> LBRACKET ID RBRACKET . NEWLINE

    NEWLINE         shift and go to state 12


state 11

    (5) statement -> ID EQUAL VALUE . NEWLINE

    NEWLINE         shift and go to state 13


state 12

    (4) statement -> LBRACKET ID RBRACKET NEWLINE .

    LBRACKET        reduce using rule 4 (statement -> LBRACKET ID RBRACKET NEWLINE .)
    ID              reduce using rule 4 (statement -> LBRACKET ID RBRACKET NEWLINE .)
    NEWLINE         reduce using rule 4 (statement -> LBRACKET ID RBRACKET NEWLINE .)
    $end            reduce using rule 4 (statement -> LBRACKET ID RBRACKET NEWLINE .)


state 13

    (5) statement -> ID EQUAL VALUE NEWLINE .

    LBRACKET        reduce using rule 5 (statement -> ID EQUAL VALUE NEWLINE .)
    ID              reduce using rule 5 (statement -> ID EQUAL VALUE NEWLINE .)
    NEWLINE         reduce using rule 5 (statement -> ID EQUAL VALUE NEWLINE .)
    $end            reduce using rule 5 (statement -> ID EQUAL VALUE NEWLINE .)

